--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.21",
+    "react-router-dom": "^6.11.2",
     "swagger-ui-express": "^4.1.4",
     "yamljs": "^0.3.0"
   },
