feat : systeme de connexion et de deconnection

--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
   "license": "",
   "main": "index.js",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^0.19.2",
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
-    "mongoose": "^5.9.21",
+    "mongoose": "^5.13.17",
     "react-router-dom": "^6.11.2",
+    "redux": "^4.2.1",
     "swagger-ui-express": "^4.1.4",
     "yamljs": "^0.3.0"
   },
